<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    >


    <FrameLayout
        android:id="@+id/fragment_getDrugStore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.siehuai.smartdrugbox.view.userSetMedicine.SetDetailFragment"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="start|center|left"
                android:orientation="vertical"
                android:padding="5dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="start|left"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/text_drugStoreName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/drug_store"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />

                    <AutoCompleteTextView
                        android:id="@+id/editText_drugStore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/underline"
                        android:completionThreshold="1"
                        android:hint="@string/example_drugstore"
                        android:inputType="textAutoComplete|textNoSuggestions"
                        android:textColorHint="@color/hint"
                        android:textSize="18sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="start|left"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/text_medicineName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/medicine"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <AutoCompleteTextView
                        android:id="@+id/editText_medicine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/underline"
                        android:completionThreshold="1"
                        android:hint="@string/example_medicine"
                        android:inputType="textAutoComplete|textNoSuggestions"
                        android:textColorHint="@color/hint"
                        android:textSize="18sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="start|left"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/text_pillNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/pill_number"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/editText_pillNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/underline"
                        android:completionThreshold="1"
                        android:hint="@string/example_pill_number"
                        android:inputType="number"
                        android:textColorHint="@color/hint"
                        android:textSize="18sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/text_take_frequency"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/frequency_of_taking"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/editText_perDayNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/underline"
                        android:hint="@string/frequency_per_day"
                        android:inputType="number"
                        android:textColorHint="@color/hint"
                        android:textSize="18sp"
                        />

                    <EditText
                        android:id="@+id/editText_interval"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/underline"
                        android:hint="@string/interval"
                        android:inputType="number"
                        android:textColorHint="@color/hint"
                        android:textSize="18sp"
                        />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    />

            </LinearLayout>

        </ScrollView>


    </FrameLayout>

</layout>
