<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/img_newUser"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="118dp"
                app:srcCompat="@drawable/placeholder"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/editText_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_newUser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textCapSentences"
                android:textColor="@color/grey_500"/>

            <EditText
                android:id="@+id/editText_totalCompartmentNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/editText_userName"
                android:layout_alignRight="@+id/editText_userName"
                android:layout_below="@+id/editText_userName"
                android:layout_marginTop="14dp"
                android:ems="10"
                android:hint="@string/compartment_number"
                android:inputType="number"
                android:textColor="@color/grey_500"/>

            <EditText
                android:id="@+id/editText_emergencyContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText_totalCompartmentNumber"
                android:layout_alignStart="@+id/editText_totalCompartmentNumber"
                android:layout_below="@+id/editText_totalCompartmentNumber"
                android:layout_marginTop="14dp"
                android:ems="10"
                android:hint="@string/emergency_contact"
                android:inputType="number"
                android:textColor="@color/grey_500"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/editText_userName"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="45dp"
                android:text="@string/tap_to_change"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/textView"
                android:layout_below="@+id/editText_emergencyContact"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="10dp"
                android:text="@string/confirm"/>


        </RelativeLayout>


    </ScrollView>

</layout>
