<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.siehuai.smartdrugbox.User.view.MedicineBox.ViewCompartmentDetailsFragment"
    >

    <FrameLayout
        android:id="@+id/fragment_view_compartment_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView_medicine"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="83dp"
                    android:layout_marginRight="83dp"
                    android:layout_marginTop="36dp"
                    app:srcCompat="@drawable/placeholder"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView_medicine"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/grey_100"
                    >

                    <EditText
                        android:id="@+id/editText_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/name"
                        android:inputType="none"
                        android:paddingTop="10dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout_drugStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textInputLayout_name"
                    android:layout_alignStart="@+id/textInputLayout_name"
                    android:layout_below="@+id/textInputLayout_name"
                    android:layout_marginTop="21dp"
                    android:background="@color/grey_100"
                    >

                    <EditText
                        android:id="@+id/editText_drugStore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/drug_store"
                        android:inputType="none"
                        android:paddingTop="10dp"
                        />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout_frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textInputLayout_drugStore"
                    android:layout_alignStart="@+id/textInputLayout_drugStore"
                    android:layout_below="@+id/textInputLayout_drugStore"
                    android:layout_marginTop="22dp"
                    android:background="@color/grey_100"
                    >

                    <EditText
                        android:id="@+id/editText_frequency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/frequency_of_taking"
                        android:inputType="none"
                        android:paddingTop="10dp"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textInputLayout_frequency"
                    android:layout_alignStart="@+id/textInputLayout_frequency"
                    android:layout_below="@+id/textInputLayout_frequency"
                    android:layout_marginTop="25dp"
                    android:background="@color/grey_100"
                    >

                    <EditText
                        android:id="@+id/editText_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/price"
                        android:inputType="none"
                        android:paddingTop="10dp"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/textInputLayout_price"
                    android:layout_alignRight="@+id/textInputLayout_price"
                    android:layout_below="@+id/textInputLayout_price"
                    android:layout_marginTop="24dp"
                    android:background="@color/grey_100"
                    >

                    <EditText
                        android:id="@+id/editText_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:focusable="false"
                        android:gravity="top|left"
                        android:hint="@string/description"
                        android:inputType="textMultiLine|none"
                        android:minLines="6"
                        android:paddingTop="10dp"
                        android:selectAllOnFocus="false"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout_moreInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textInputLayout_description"
                    android:layout_alignStart="@+id/textInputLayout_description"
                    android:layout_below="@+id/textInputLayout_description"
                    android:layout_marginBottom="48dp"
                    android:layout_marginTop="48dp"
                    android:background="@color/grey_100"
                    >

                    <EditText
                        android:id="@+id/editText_moreInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:focusable="false"
                        android:gravity="top|left"
                        android:hint="@string/more_info"
                        android:inputType="textMultiLine|none"
                        android:minLines="6"
                        android:paddingTop="10dp"/>


                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

        </ScrollView>
    </FrameLayout>

</layout>
